# game-store

./: README.md
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  Program.cs  api.csproj  api.sln
api/Controllers/: AdminController.cs  AuthController.cs  CartController.cs  CouponController.cs  GameController.cs  HashController.cs  HealthController.cs  HelloController.cs  ImageController.cs  ProfileController.cs  PurchaseController.cs  TopupController.cs  UserController.cs
api/Helper/: ImageHelper.cs
api/Models/Dtos/: CartItemDto.cs  CouponDto.cs  CouponValidationDto.cs  GameDto.cs  PurchaseDto.cs  PurchaseItemDto.cs  TopSellerGameDto.cs  UserInfo.cs
api/Models/Request/: AddCouponRequest.cs  AddGameRequest.cs  CheckoutWithCouponRequest.cs  Login.cs  LoginRequest.cs  SignupRequest.cs  TopupRequest.cs  UpdateCouponRequest.cs  UpdateProfileRequest.cs  ValidateCouponRequest.cs
api/Models/Response/: AuthResponse.cs  KiroResponse.cs
api/Models/Tables/: Account.cs  AdminActivityLog.cs  CartItem.cs  Category.cs  DiscountCode.cs  DiscountUsage.cs  Game.cs  GameCategory.cs  KiroContext.cs  Purchase.cs  PurchaseItem.cs  TransactionHistory.cs  UserGame.cs
api/Properties/: launchSettings.json
api/Services/: StartupValidationService.cs
api/src/: config.rs  main.rs  model.rs  routes.rs  schema.rs
api/src/handlers/: auth_handler.rs  general_handler.rs  mod.rs  user_handler.rs
api/src/models/: dto.rs  entities.rs  mod.rs
api/src/services/: auth_service.rs  mod.rs  user_repository.rs
api/src/utils/: error.rs  mod.rs
app/: Dockerfile  README.md  angular.json  (+3 more)
(+132 files in other folders)
